# GstSimpleSrc

./: README.md  cross_file.txt  meson.build
src/: gstsimplesrc.c  gstsimplesrc.h  orc-dist.c  orc-dist.h  simplesrc.c  simplesrc.h
